--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "contactOwner": "628817839722",
   "ownerNumber": ["628817839722@s.whatsapp.net"],
-  "botName": "VelzzyBOT-MDོ",
+  "botName": "VelizyBOT-MDོ",
   "ownerName": "RonzzOfcོ",
   "pathimg": "./temp/logo.jpg",
   "footer": "VelzzyBOT-MDོ © RonzzOfcོ",
